# plaincities

./: README.md  README.rst  pyproject.toml  setup.py
plaincities/: countries.py  generator.py
plaincities/_values/: constants.py
plaincities_values/ar/: AO_ar.py  AR_ar.py  AU_ar.py  BD_ar.py  BG_ar.py  BM_ar.py  BN_ar.py  CI_ar.py  CN_ar.py  EE_ar.py  EH_ar.py  ER_ar.py  GF_ar.py  GL_ar.py  HK_ar.py  IL_ar.py  JE_ar.py  JO_ar.py  KE_ar.py  KP_ar.py  KR_ar.py  KW_ar.py  KY_ar.py  LB_ar.py  LS_ar.py  LY_ar.py  MA_ar.py  MR_ar.py  MS_ar.py  MU_ar.py  PA_ar.py  PR_ar.py  PS_ar.py  RS_ar.py  RU_ar.py  SC_ar.py  SE_ar.py  SJ_ar.py  SL_ar.py  SO_ar.py  (+9 more)
plaincities_values/en/: AG_en.py  AT_en.py  BA_en.py  BG_en.py  BI_en.py  BJ_en.py  BN_en.py  BW_en.py  BY_en.py  CG_en.py  CI_en.py  CK_en.py  CV_en.py  CY_en.py  DJ_en.py  EC_en.py  EE_en.py  EG_en.py  EH_en.py  ES_en.py  FI_en.py  FK_en.py  IL_en.py  IQ_en.py  IT_en.py  JE_en.py  KG_en.py  KY_en.py  LB_en.py  LC_en.py  LV_en.py  LY_en.py  MQ_en.py  MT_en.py  NC_en.py  NL_en.py  NO_en.py  NR_en.py  NZ_en.py  RE_en.py  (+14 more)
plaincities_values/es/: AT_es.py  AU_es.py  BI_es.py  CM_es.py  CN_es.py  CO_es.py  EG_es.py  ES_es.py  GI_es.py  GP_es.py  GU_es.py  GY_es.py  HN_es.py  HR_es.py  IL_es.py  IR_es.py  KG_es.py  KR_es.py  KW_es.py  LB_es.py  LS_es.py  LT_es.py  LY_es.py  MM_es.py  MQ_es.py  MR_es.py  MT_es.py  MU_es.py  MW_es.py  MX_es.py  NE_es.py  NO_es.py  NP_es.py  NZ_es.py  PA_es.py  PF_es.py  PS_es.py  PT_es.py  RE_es.py  RS_es.py  (+10 more)
test/: test_countries.py
tests/: test_countries.py  test_generated.py
(+2931 files in other folders)
